[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "{{ cookiecutter.package_name }}"
version = "0.0.1"
description = "{{ cookiecutter.description }}"
authors = [
  { name = "{{ cookiecutter.author_name }}" }
]
dependencies = [
  "PyYAML",
  "python-dotenv"
]

[project.optional-dependencies]
dev = [
  "black",
  "coverage",
  "flake8",
  "pre-commit",
  "pytest"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88

[tool.flake8]
ignore = ["D203", "W503"]
max-complexity = 9
max-line-length = 88
extend-ignore = ["E203"]
exclude = [
    "__pycache__",
    "venv",
    ".venv"
]

[tool.nbstripout]